fsm/state_machine_procmacro/tests/trybuild/forgot_name_fail.stderr
error: expected `,`
 --> $DIR/forgot_name_fail.rs:6:9
  |
6 |     One --(A)--> Two
  |         ^

error: The first line of the fsm definition should be `MachineName, CommandType, ErrorType`
 --> $DIR/forgot_name_fail.rs:6:9
  |
6 |     One --(A)--> Two
  |         ^
